releasing offer left

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 GOOGLE_KEY=248022132237-n6fgq72477rr4cid2a3rb8pb5sovlue6.apps.googleusercontent.com
 GOOGLE_SECRET=-sg17tvlJZqxiOOax7unQKB0
+gmail_username: 'priyanka.pakki@beautifulcode.in'
+gmail_password: 'Switching2!'
